Media Query Added

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <img class="player-photo" src="images/players/player-2.png" alt="">
                     </div>
                     <article class="blog">
-                        <h3>Neymar Jr</h3>
+                        <h3>Lionel Messi</h3>
                         <p>I am the greatest of all time. I am the greatest of all time. I am the greatest of all time.
                             I
                             am the greatest of all time. I am the greatest of all time. I am the greatest of all time.I
@@ -63,7 +63,7 @@
                         <img class="player-photo" src="images/players/player-3.png" alt="">
                     </div>
                     <article class="blog">
-                        <h3>Neymar Jr</h3>
+                        <h3>Cristiano Ronaldo</h3>
                         <p>I am better than Messi. I am better than Messi. I am better than Messi. I am better than
                             Messi. I am better than Messi. I am better than Messi. I am better than Messi. I am better
                             than Messi.
@@ -75,7 +75,7 @@
                         <img class="player-photo" src="images/players/player-4.png" alt="">
                     </div>
                     <article class="blog">
-                        <h3>Neymar Jr</h3>
+                        <h3>Paulo Dybala</h3>
                         <p>I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar
                             Junior.I
                             am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar
@@ -87,7 +87,7 @@
                         <img class="player-photo" src="images/players/player-5.png" alt="">
                     </div>
                     <article class="blog">
-                        <h3>Neymar Jr</h3>
+                        <h3>Mesut Ozil</h3>
                         <p>I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar
                             Junior.I
                             am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar
@@ -99,7 +99,7 @@
                         <img class="player-photo" src="images/players/player-6.png" alt="">
                     </div>
                     <article class="blog">
-                        <h3>Neymar Jr</h3>
+                        <h3>Icardi</h3>
                         <p>I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar
                             Junior.I
                             am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar
@@ -111,7 +111,7 @@
                         <img class="player-photo" src="images/players/player-7.png" alt="">
                     </div>
                     <article class="blog">
-                        <h3>Neymar Jr</h3>
+                        <h3>Angel Di Maria</h3>
                         <p>I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar
                             Junior.I
                             am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar
@@ -123,7 +123,7 @@
                         <img class="player-photo" src="images/players/player-8.png" alt="">
                     </div>
                     <article class="blog">
-                        <h3>Neymar Jr</h3>
+                        <h3>Kylian Mbappe</h3>
                         <p>I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar
                             Junior.I
                             am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar
@@ -135,7 +135,7 @@
                         <img class="player-photo" src="images/players/player-9.png" alt="">
                     </div>
                     <article class="blog">
-                        <h3>Neymar Jr</h3>
+                        <h3>Mohammed Salah</h3>
                         <p>I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar
                             Junior.I
                             am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar
@@ -147,7 +147,7 @@
                         <img class="player-photo" src="images/players/player-10.png" alt="">
                     </div>
                     <article class="blog">
-                        <h3>Neymar Jr</h3>
+                        <h3>Harry Kane</h3>
                         <p>I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar
                             Junior.I
                             am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar
@@ -159,7 +159,7 @@
                         <img class="player-photo" src="images/players/player-11.png" alt="">
                     </div>
                     <article class="blog">
-                        <h3>Neymar Jr</h3>
+                        <h3>Kevin De Bruyne</h3>
                         <p>I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar
                             Junior.I
                             am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar
@@ -171,7 +171,7 @@
                         <img class="player-photo" src="images/players/player-12.png" alt="">
                     </div>
                     <article class="blog">
-                        <h3>Neymar Jr</h3>
+                        <h3>Philippe Coutinho</h3>
                         <p>I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar
                             Junior.I
                             am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar
