Player bio added

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                     </div>
                     <article class="blog">
                         <h3>Neymar Jr</h3>
-                        <p>I am Nermar Junior. I am Nermar Junior. I am Nermar Junior. I am Nermar Junior. I am Nermar
+                        <p>I am Neymar Junior. I am Neymar Junior. I am Neymar Junior. I am Neymar Junior. I am Neymar
                             Junior. I
-                            am Nermar Junior. I am Nermar Junior.I am Nermar Junior.I am Nermar Junior. I am Nermar
+                            am Neymar Junior. I am Neymar Junior.I am Neymar Junior.I am Neymar Junior. I am Neymar
                             Junior.</p>
                     </article>
                 </div>
@@ -76,10 +76,9 @@
                     </div>
                     <article class="blog">
                         <h3>Paulo Dybala</h3>
-                        <p>I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar
-                            Junior.I
-                            am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar
-                            Junior.</p>
+                        <p>I am Paulo Dybala.I am Paulo Dybala.I am Paulo Dybala.I am Paulo Dybala.I am Paulo Dybala.I
+                            am Paulo Dybala.I am Paulo Dybala.I am Paulo Dybala.I am Paulo Dybala.I am Paulo Dybala.I am
+                            Paulo Dybala.</p>
                     </article>
                 </div>
                 <div class="player">
@@ -99,11 +98,10 @@
                         <img class="player-photo" src="images/players/player-6.png" alt="">
                     </div>
                     <article class="blog">
-                        <h3>Icardi</h3>
-                        <p>I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar
-                            Junior.I
-                            am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar
-                            Junior.</p>
+                        <h3>Mauro Icardi</h3>
+                        <p>I am Icardi.I am Icardi.I am Icardi.I am Icardi.I am Icardi.I am Icardi.I am Icardi.I am
+                            Icardi.I am Icardi.I am Icardi.I am Icardi.I am Icardi.I am Icardi.I am Icardi.I am Icardi.I
+                            am Icardi.I am Icardi.</p>
                     </article>
                 </div>
                 <div class="player">
@@ -112,10 +110,8 @@
                     </div>
                     <article class="blog">
                         <h3>Angel Di Maria</h3>
-                        <p>I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar
-                            Junior.I
-                            am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar Junior.I am Nermar
-                            Junior.</p>
+                        <p>I am Angel Di Maria.I am Angel Di Maria.I am Angel Di Maria.I am Angel Di Maria.I am Angel Di
+                            Maria.I am Angel Di Maria.I am Angel Di Maria.I am Angel Di Maria.I am Angel Di Maria.</p>
                     </article>
                 </div>
                 <div class="player">
